# zed-ros2-wrapper-mlx

./: .gitignore  CMakeLists.txt  README.md  TODO.md  porting_plan.md
.claude/: settings.json
zed_components/: CMakeLists.txt
zed_components/src/include/: macos_unsupported.hpp  sl_oc_bridge.hpp
zed_components/src/tools/include/: mlx_depth_bridge.hpp
zed_components/src/tools/scripts/: mlx_depth_worker.py
zed_components/src/tools/src/: mlx_depth_bridge.cpp  sl_oc_bridge.cpp
zed_components/src/zed_camera_mlx/include/: zed_camera_mlx_component.hpp
zed_components/src/zed_camera_mlx/src/: zed_camera_mlx_component.cpp  zed_camera_mlx_video_depth.cpp
zed_debug/: CMakeLists.txt
zed_wrapper/config/: common_stereo_macos.yaml  zed2i_macos.yaml
zed_wrapper/launch/: zed_camera_macos.launch.py
